tdf#92754: Excel Chart content type is not exported properly.

Problem Description :
- Excel chart contenttype is not exported properly,
it exported the .xls file as .bin file.
- Due to this when we open the roundtrip file back in MS Office,
the embedded excel chart is not open and gives ERROR.

Solution : Added support for embedded .xls for docx file.

Change-Id: I16e18ffa4f6c72526665ff9d34d6c6053278c2c5